[workspace]
members = [
    #"crates/integrity",
    "crates/alt_coordinator",
]

[workspace.package]
version = "0.2.0"
rust-version = "1.70.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "=1.0.163", default-features = false }
hdi = { version = "=0.4.0-beta-dev.30", default-features = false }
hdk = { version = "=0.3.0-beta-dev.34", default-features = false }
zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-3.0" }

[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = "z"
#lto = true
lto = false
