[package]
name = "profiles_alt_coordinator"
version = "0.2.0"
rust-version = "1.70.0"
edition = "2021"
description = "Profiles zome for any Holochain app"
documentation = "https://holochain-open-dev.github.io/profiles"
homepage = "https://docs.rs/hc_zome_profiles"
repository = "https://github.com/ddd-mtl/profiles_alt_zome"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
serde = { version = "=1.0.163", default-features = false }
hdk = { version = "=0.2.6", default-features = false }

profiles_integrity = { package="hc_zome_profiles_integrity", path = "../../profiles/crates/integrity" }


