[package]
name = "profiles_alt_coordinator"
version = "0.2.0"
rust-version = "1.70.0"
edition = "2021"
authors = ["ddd-mtl"]
description = "Profiles zome for any Holochain app"
documentation = "https://holochain-open-dev.github.io/profiles"
homepage = "https://docs.rs/hc_zome_profiles"
repository = "https://github.com/ddd-mtl/profiles_alt_zome"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
serde.workspace = true
hdk.workspace = true

hc_zome_profiles_integrity = {path = "../integrity"}


